# fintechIQ_test_task

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  task_conditions.md
alembic/: env.py
alembic/versions/: 20250719132848_added_blacklists_and_reasons_tables.py  20250721102845_added_indexes_in_blacklist_table.py
src/: conftest.py  main.py
src/api/blacklist/: repository.py  router.py  schemas.py
src/api/blacklist/tests/: test_blacklist_api.py
src/api/reason/: repository.py  router.py  schemas.py
src/api/reason/tests/: test_reasons_api.py
src/consumers/: blacklist_consumer.py
src/core/: config.py
src/core/database/: connector.py  mixins.py
src/core/rabbit/: consumer.py  producer.py
src/core/repository/: base.py
src/core/schemas/: mixins.py  response_schemas.py
src/models/: __init__.py  blacklist.py  reason.py
src/utils/: logger.py
