[project]
name = "blacklist_service"
version = "0.0.1"
description = "Test assignment for FintechIQ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika==9.5.5",
    "alembic>=1.16.4",
    "asyncpg==0.29.0",
    "faker==37.4.0",
    "fastapi>=0.115.13",
    "httpx==0.28.1",
    "itsdangerous>=2.2.0",
    "packaging>=25.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.0",
    "pydantic>=2.11.7",
    "pytest-asyncio==1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
    "watchfiles>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
exclude = ["venv", "alembic", "docker", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203", "E266", "E501", "B008"]

[tool.ruff.format]
quote-style = "double"
